Fix file path issue